# potential-parakeet

./: CMakeLists.txt
include/: constants.h  cpu.h  register.h  screen.h
src/: cpu.c  main.c  main.cpp  register.c  screen.c
